base/src/test/resources/failure/holes/issue747.aya.txt
In file $FILE:6:13 ->

  4 | def abs (a : Int) : Nat
  5 |   | pos a => a
  6 |   | neg a => {??}
                   ^--^

Goal: Goal of type
        Nat
        (Normalized: Nat)
      Context:
        {a : Nat}
      To ensure confluence:
        Given (a => zero), we should have: zero

In file $FILE:6:13 ->

  4 | def abs (a : Int) : Nat
  5 |   | pos a => a
  6 |   | neg a => {??}
                   ^--^

Error: Unsolved meta _

1 error(s), 0 warning(s).
What are you doing?
